<resources>
    <string name="app_name">My Application</string>
    <string name="my_application">My Application</string>
    <string name="adresss_blk_61_lt_1_south_villa_heights_2_annex_catalunan_grande_davao_city">Adresss: Blk. 61 Lt.1 South Villa Heights 2 Annex, Catalunan Grande, Davao City</string>
    <string name="name_lumata_jermaine_earl">Name: Lumata, Jermaine Earl</string>
    <string name="_12_knuth">12-Knuth</string>
    <string name="contact_number_0909070770">Contact Number: 0909070770</string>
    <string name="email_kudoiii27_gmail_com">Email: kudoiii27@gmail.com</string>
    <string name="stan_itzy">STAN ITZY!!!</string>
</resources>